Moved framework from URLs to URIs